--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,47 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Compiled output
+packages/angularjs-to-angular15/dist
+packages/angularjs-to-angular15/tmp
+packages/angularjs-to-angular15/out-tsc
+packages/angularjs-to-angular15/bazel-out
+
+# Node
 packages/api/config/snapshots
 packages/api/node_modules
 packages/app/node_modules
-node_modules
+packages/angularjs-to-angular15/node_modules
+/node_modules
+
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+packages/angularjs-to-angular15/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
